--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600&display=swap';
